# FFmpegText

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/example/jiege/ncrf/ffmpegtext/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/example/jiege/ncrf/ffmpegtext/: MainActivity.java  VideoUtils.java
app/src/main/res/values/: strings.xml
app/src/test/java/example/jiege/ncrf/ffmpegtext/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
